[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/gui/arrow.png" type="Texture" id=1]
[ext_resource path="res://themes/gui_general.tres" type="Theme" id=2]
[ext_resource path="res://scenes/gui/puzzle_displayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/gui/battle_window.gd" type="Script" id=4]
[ext_resource path="res://fonts/Shadows_Into_Light/ShadowsIntoLight.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="battle_window" type="VBoxContainer"]
margin_right = 361.0
margin_bottom = 600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crafting_result" type="HBoxContainer" parent="."]
visible = false
margin_right = 361.0
margin_bottom = 7.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredients_list" type="VBoxContainer" parent="crafting_result"]
visible = false
margin_right = 137.0
margin_bottom = 99.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredients1" type="Label" parent="crafting_result/ingredients_list"]
margin_right = 137.0
margin_bottom = 48.0
text = "blopp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_sprite" type="TextureRect" parent="crafting_result"]
visible = false
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
expand = true

[node name="results_list" type="VBoxContainer" parent="crafting_result"]
margin_left = 178.0
margin_right = 183.0
margin_bottom = 7.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="result1" type="Label" parent="crafting_result/results_list"]
margin_right = 5.0
margin_bottom = 7.0
text = "bloop
"

[node name="puzzle_displayer" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 361.0
margin_bottom = 390.0
alignment = 1

[node name="time_header_label" type="Label" parent="."]
margin_top = 494.0
margin_right = 361.0
margin_bottom = 600.0
theme = SubResource( 4 )
text = "TIME:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="time_header_label"]
margin_left = 144.0
margin_right = 214.0
margin_bottom = 48.0
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="."]
